# reshare

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: codeql-analysis.yml  main.yaml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20210714_1648.py
data/: tags.csv
nginx/: default.conf
recipes/: admin.py  models.py  urls.py  utils.py  views.py
recipes/management/commands/: filldb.py
recipes/migrations/: 0001_initial.py  0002_auto_20210714_1648.py
recipes/templatetags/: user_filters.py
reshare/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/auth/: resetPassword.html
templates/base/: base.html
templates/base/includes/: footer.html  header.html
templates/error/: 400.html
templates/flatpages/: default.html
templates/misc/: shopListPDF.html
templates/recipes/: formRecipe.html  myFollow.html  shopList.html  singlePage.html
templates/recipes/includes/: filterTags.html  recipeCard.html  recipeCardSmall.html
users/: urls.py  views.py
